--- a/placesyouvebeen/Views/Places/CreateForm.cshtml
+++ b/placesyouvebeen/Views/Places/CreateForm.cshtml
@@ -1,6 +1,8 @@
 <h1>Add a Place You've been</h1>
 <form action="/places" method="post">
-  <label for="new-place">Add a new item</label>
+  <label for="new-place">Add a new city</label>
   <input id="new-place" name="new-place" type="text">
+  <label for="new-state">Add the state for your city</label>
+  <input id="new-state" name="new-state" type="text">
   <button type="submit">Submit</button>
 </form>
