--- a/placesyouvebeen/Views/Places/Index.cshtml
+++ b/placesyouvebeen/Views/Places/Index.cshtml
@@ -1,8 +1,8 @@
 <h1>Places You've Been</h1>
 <ul>
-@foreach(var city in Model)
+@foreach(var item in Model)
 {
-<li>@city.GetCity()</li>
+<li>@item.GetCity(), @item.GetState()</li>
 }
 
 </ul>
