add place id, user clicks on city and is redricted to state and description page

--- a/placesyouvebeen/Views/Places/CreateForm.cshtml
+++ b/placesyouvebeen/Views/Places/CreateForm.cshtml
@@ -4,5 +4,7 @@
   <input id="new-place" name="new-place" type="text">
   <label for="new-state">Add the state for your city</label>
   <input id="new-state" name="new-state" type="text">
+  <label for="new-description">Add a description</label>
+  <input id="new-description" name="new-description" type="text">
   <button type="submit">Submit</button>
 </form>
